v1.17/ingress/example-lb.yml
apiVersion: v1
kind: Service
metadata:
  name: my-lb
spec:
  selector:
    app: web
  ports:
    - protocol: TCP
      port: 8080
  type: LoadBalancer
